# DarbitNet

./: .bandit  .flake8  .gitignore  AGENTS.md  AUDIT_REPORT.md  AUDIT_SUMMARY.md  CONTRIBUTING.md  README.md  e2e_benchmark.py  health_check.py  install_choco.ps1  pytest.ini  requirements.txt  run_inference.py  run_inference_server.py  setup-bitnet.ps1  setup_env.py  validate_installation.ps1
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
darbot-src/darbot-libs/cmake/: CMakeLists.txt
darbot-src/darbot-libs/docs/: README.md
darbot-src/darbot-libs/scripts/: setup_env.py
darbot-src/games/: Level1-EnvironmentConfig.md
docs/: CHANGELOG.md  codegen.md
src/: CMakeLists.txt
tests/: test_e2e_benchmark.py  test_project_structure.py  test_setup_env.py  test_utils.py
utils/: convert-ms-to-gguf-bitnet.py  convert.py  e2e_benchmark.py
